OPSEXP-1951: refactor zepellin chart inclusion (#898)